syntax = "proto3";

message CommonAck{
	int32  status = 1;
	uint32 timeStamp = 2;
	string message =3;
}

message BlankMsg{
    bool helper = 1;
}

message HeadBeat {
    int32 time_stamp = 1;
    int32 code = 2;
}

message LoginReq{
	string user_id = 1;
	string uuid = 2;
	string server_id = 3;
}

message LoginAck{
	CommonAck common = 1;
}

message LogoutReq{
	string user_id = 1;
}

message LogoutAck{
    string user_id = 1;
}